variadics/tests/compile-fail-nightly/var_args_spread_twice.rs
../compile-fail/var_args_spread_twice.rs